...
        setupBindings()
        viewModel.fetchPostsWithAlbums(page: 1)
        setupViews()
    }
    
    private func setupAccessibility() {
        tableView.accessibilityIdentifier = "PostListViewController.tableView"
        loadingView.accessibilityIdentifier = "PostListViewController.loadingView"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        // Show navigation bar and set title
        self.navigationController?.setNavigationBarHidden(false, animated: true)
...
