...
        // Apply shadow and corner radius to the title container view
        titleContainer.addShadowAndCorner(radius: 8)
    }
    
    private func setupTableView() {
        // Register the custom table view cell for displaying post images
        tableView.accessibilityIdentifier = "PostDetailsViewController.tableView"
        tableView.register(UINib.init(nibName: "PostImagesTableViewCell", bundle: nil), forCellReuseIdentifier: "PostImagesTableViewCell")
        // Set the data source and delegate to self
        tableView.dataSource = self
        tableView.delegate = self
    }
}
...
